# symonic-launcher

./: README.md
.github/workflows/: podtic-sql-check.yml  render-splat-guide.yml
apps/deck-api/: README.md  pyproject.toml
apps/deck-api/app/: __init__.py  main.py
apps/deck-api/tests/: test_main.py
apps/deck-web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/deck-web/src/: main.ts  styles.css
docs/podtics/: implementation-plan.md
examples/: splat-report.example.json
experimental/barrel-system/: BARREL_SYSTEM_V0.md  LAUNCHER_CURRENT_STATE.md
reports/: SYM-PUB-NEON-PERTURBATION-SHARD-001.json  SYM-PUB-NEON-PERTURBATION-SHARD-001.md
schemas/: podtic-1.0.schema.json  podtic-section-1.0.schema.json  splat-report-0.1.schema.json
scripts/: seed-podtic-core.sql
src/podtics/: README.md  queries.sql
src/splat/: README.md  registry.json
src/splat/carry-cascade/: README.md  index.html
supabase/migrations/: 0001_podtic_core.sql  0002_podtic_revision_functions.sql
templates/: splat-report.md
tools/: README.md  create_symonic_design_guide.py  validate_splat_report.py
